# blog

./: .demo.env  .gitignore  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  new-feature.md
blog/: settings.py  urls.py
blogs/: admin.py  models.py  urls.py  views.py
blogs/migrations/: 0001_initial.py  0002_post_featured_image.py  0003_alter_post_featured_image.py  0004_alter_post_featured_image.py  0005_alter_post_featured_image.py  0006_post_slug.py  0007_alter_post_slug.py  0008_alter_post_excerpt.py  0009_auto_20210712_1923.py  0010_alter_post_slug.py  0011_alter_post_slug.py  0012_auto_20210713_1827.py  0013_auto_20210716_1426.py  0014_auto_20210717_1443.py  0015_alter_post_content.py
mainpages/: admin.py  models.py  urls.py  views.py
mainpages/migrations/: 0001_initial.py  0002_alter_changelogsmodel_version_description.py  0003_alter_changelogsmodel_options.py  0004_alter_changelogsmodel_version_description.py  0005_changelogsmodel_version_type.py  0006_contactform.py  0007_contactform_was_readed.py
mainpages/static/: particlesjs-config.json
mainpages/static/css/: stylesheet.css
mainpages/static/js/: font_awesome.js  main.js
templates/: base.html
templates/blogs/: blogs_detail.html  blogs_home.html
templates/includes/: alerts.html  footer.html  navbar.html  scripts.html  stylesheets.html
templates/mainpages/: about.html  changelogs.html  contact_me.html  home.html
user/: admin.py  models.py  signals.py
user/migrations/: 0001_initial.py  0002_profile_profile_image.py
