[tool.poetry]
name = "blog"
version = "0.1.0"
description = "My Personal Blog"
authors = ["wrench1815 <hardeepkumar1815@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.6"
yapf = "^0.30.0"
python-dotenv = "^0.15.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
