[tool.poetry]
name = "blog"
version = "0.1.0-beta.2"
description = "My Personal Blog"
authors = ["wrench1815 <hardeepkumar1815@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.6"
yapf = "^0.30.0"
python-dotenv = "^0.15.0"
gunicorn = "^20.1.0"
whitenoise = "^5.2.0"
dj-database-url = "^0.5.0"
psycopg2 = "^2.8.6"
django-jazzmin = "^2.4.6"
Pillow = "^9.0.0"
django-ckeditor = "^6.1.0"
django-storages = "^1.11.1"
dropbox = "^11.13.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
